Fixed bug of dropdown not showing that its loading courses

--- a/frontend/src/CoursePage.css
+++ b/frontend/src/CoursePage.css
@@ -20,7 +20,6 @@
 
 @media (max-width: 470px) {
   .course-container {
-    height: 100dvh;
     padding: 30px 20px;
     font-size: 1em;
   }
